MODLD-729: Ensure proper handling and closure of InputStream in importFile method